Upgrade Storybook dependencies to version 10.3.6 and refactor `Deque` method usage for improved code clarity and consistency.